# voice-recorder-transcriber

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
tests/: test_response.py  test_transcribe.py
utils/: transcription_functions.py
