[project]
name = "voice-recorder-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.44.1",
    "groq>=0.31.1",
    "gtts>=2.5.4",
    "huggingface-hub>=0.34.4",
    "ipywidgets>=8.1.7",
    "loguru>=0.7.3",
    "ollama>=0.5.3",
    "openai-whisper>=20250625",
    "pillow>=11.3.0",
    "piper-tts>=1.3.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.7",
    "pydub>=0.25.1",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "spaces>=0.40.2",
    "tensorflow==2.17.0",
    "tf-keras>=2.17.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.0",
    "xxhash>=3.5.0",
]
